--- a/style.css
+++ b/style.css
@@ -235,6 +235,10 @@ nav span {
   background-color: #701516;
 }
 
+.REACT {
+  background-color: #aa894c;
+}
+
 .ONLINE {
   background-color: rgb(3, 192, 3);
 }
