--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ body {
 
 .popup {
   position: fixed;
-  top: 50%;
-  left: 50%;
+  top: 31em;
+  left: 19em;
   transform: translate(-50%, -50%);
   max-width: 32em;
   width: 90%;
