--- a/style.css
+++ b/style.css
@@ -339,6 +339,10 @@ nav span {
   background-color: #aa894c;
 }
 
+.NEXT {
+  background-color: #149b84;
+}
+
 .ANGULAR {
   background-color: #bb0003;
 }
