--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 60px;
+  min-height: 60px;
 }
 
 nav ul {
