--- a/style.css
+++ b/style.css
@@ -156,14 +156,10 @@ nav {
   }
 
   nav {
-    background-color: #202529; 
-    display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    min-height: 50px;
-    padding: 0.4em;
   }
+
   .slide-mode {
     display: flex;
     flex-direction: row;
@@ -186,13 +182,10 @@ nav {
   }
 
   nav {
-    background-color: #202529; 
-    display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    min-height: 50px;
-    padding: 0.4em;
   }
+  
   .slide-mode {
     display: flex;
     flex-direction: row;
@@ -203,7 +196,11 @@ nav {
 }
 
 .nav {
-  
+  background-color: #202529; 
+  display: flex;
+  align-items: center;
+  min-height: 50px;
+  padding: 0.4em;
 }
 
 .nav-presentation {
