--- a/style.css
+++ b/style.css
@@ -160,9 +160,13 @@ nav {
     justify-content: center;
   }
 
-
   .nav-space {
     height: 1.5em;
+  }
+
+  .images {
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -180,6 +184,11 @@ nav {
     justify-content: space-between;
     padding-left: 32px;
     padding-right: 32px;
+  }
+
+  .images {
+    flex-direction: row;
+    justify-content: center;
   }
 }
 
@@ -237,8 +246,6 @@ a {
 
 .images {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
   gap: 30px;
   margin-top: 20px;
   margin-left: 20px;
