--- a/style.css
+++ b/style.css
@@ -168,6 +168,25 @@ nav {
     flex-direction: column;
     align-items: center;
   }
+
+  .welcome {
+    flex-direction: column;
+    align-items: center;
+    width: 482px;
+  }
+
+  .welcomeBan {
+    width: 448px;
+    height: 88px;
+  }
+  #ban-img {
+    width: 448px;
+    height: 88px;
+  }
+
+  .descriptionLink {
+    font-size: 0.9em;
+  }
 }
 
 /* GRANDS ECRANS */
@@ -189,6 +208,27 @@ nav {
   .images {
     flex-direction: row;
     justify-content: center;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .welcome {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 896px;
+  }
+
+  .welcomeBan {
+    width: 896px;
+    height: 176px;
+  }
+
+  .descriptionLink {
+    font-size: 1.2em;
+  }
+
+  .status {
+    width: 896px;
   }
 }
 
@@ -248,8 +288,6 @@ a {
   display: flex;
   gap: 30px;
   margin-top: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
 }
 
 .name {
@@ -269,16 +307,11 @@ a {
 
 .welcome {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
-  width: 896px;
   gap: 15px;
 }
 
 .welcomeBan {
-  width: 896px;
-  height: 176px;
   overflow: hidden;
 }
 
@@ -328,7 +361,6 @@ a {
   height: 16px;
   align-items: center;
   gap: 1em;
-  font-size: 1.2em;
 }
 
 .projectTitle {
@@ -429,7 +461,6 @@ a {
 .status {
   display: flex;
   flex-direction: row;
-  width: 896px;
   margin-top: 10px;
   color: var(--status-color);
 }
